--- a/scroll parallax/index.html
+++ b/scroll parallax/index.html
@@ -71,7 +71,11 @@
     #comic-scene .section img,#comic-scene .section svg{
         top:0 !important;left:0 !important;right:0 !important;bottom:0 !important
     }
+    #comic-scene {
+        top: 20%;
+    }
 }
+
 </style>
 <body>
     <div id="comic-height"></div>
