--- a/scroll parallax/index.html
+++ b/scroll parallax/index.html
@@ -3,80 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>scroll parallax</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  
 </head>
-<style>
-    #comic-height {
-    margin-bottom: 650px;
-}.firstScene {
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: url(img/full.jpg) center center no-repeat;
-    background-size: cover;
-}.firstScene span {
-    display: block;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    bottom: 33px;
-    cursor: pointer;
-}
-#comicWrap {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: url(img/bg.png) repeat;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-#comicbook {
-    -webkit-perspective: 600px;
-    perspective: 600px;
-    -webkit-perspective-origin: center 20%;
-    perspective-origin: center 20%;
-    width: 50%;
-    height: 100%;
-    margin: 0 auto;
-}
-#comic-scene {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transition: all 0.8s cubic-bezier(0, 0, 0.2, 1);
-    transition: all 0.8s cubic-bezier(0, 0, 0.2, 1);
-}
-#comic-scene .section{
-    position: absolute;
-}
-#comic-scene .section img,#comic-scene .section svg{
-    max-width:100%;
-    max-height:100%;
-    height:auto;
-    opacity:0.95
-}
-@media screen and (max-width: 63.9375em){
-    #comic-scene .section img,#comic-scene .section svg{
-        top:0 !important;left:0 !important;right:0 !important;bottom:0 !important
-    }
-    #comic-scene {
-        top: 20%;
-    }
-}
-
-</style>
 <body>
     <div id="comic-height"></div>
 
