--- a/scroll parallax/index.html
+++ b/scroll parallax/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>scroll parallax</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="comic-height"></div>
