--- a/mask/index.html
+++ b/mask/index.html
@@ -12,6 +12,9 @@
     
 </head>
 <body>
+    <script data-cfasync="false">
+        (function(W,i,s,e,P,o,p){W['WisePopsObject']=P;W[P]=W[P]||function(){(W[P].q=W[P].q||[]).push(arguments)},W[P].l=1*new Date();o=i.createElement(s),p=i.getElementsByTagName(s)[0];o.defer=1;o.src=e;p.parentNode.insertBefore(o,p)})(window,document,'script','//loader.wisepops.com/get-loader.js?v=1&site=BJaYAeG3ta','wisepops');
+        </script>
     <div id="map"></div>
     <div class="fix_box">
         
