--- a/murmursaylove/test.html
+++ b/murmursaylove/test.html
@@ -95,6 +95,8 @@
         }
         if(getCookie("popup")!='1'){
             $('.headAD').show();
+        }else{
+            $('.headAD').hide();
         }
     </script>
 </body>
