--- a/murmursaylove/test.html
+++ b/murmursaylove/test.html
@@ -65,7 +65,7 @@
                 </div>
             </a>
             <div class="bulletin_inner">
-                <img src="https://drive.google.com/file/d/14kwBwFSFZWpfdnbjxrDGZMhFpTUzfo9D/view" alt="">
+                <img src="https://acerku01.github.io/murmursaylove/bulletin.jpg" alt="">
             </div>
         </div>
     </div>
